# Spark

./: .air.toml  .editorconfig  .env.example  .gitignore  .golangci.yml  .pre-commit-config.yaml  ARCHITECTURE.md  BRAND_GUIDELINES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DIRECTORY_STRUCTURE.md  Dockerfile  ENGINEERING_LAWS.md  FAQ.md  GOVERNANCE.md  LICENSE.md  Makefile  PRINCIPLES.md  README.md  RELEASES.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TECH_STACK.md  TERMINOLOGY.md  VISION.md  docker-compose.yml  go.work
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
ai/assistant-ai/: pyproject.toml  requirements.txt
ai/clip-ai/: pyproject.toml  requirements.txt
ai/clip-ai/src/: config.py  events.py  handler.py  main.py  models.py  repository.py  service.py
ai/clip-ai/tests/: test_handler.py  test_service.py
ai/creator-ai/: pyproject.toml  requirements.txt
ai/creator-ai/src/: config.py  events.py  handler.py  main.py  models.py  repository.py  service.py
ai/creator-ai/tests/: test_handler.py  test_service.py
ai/fraud-ai/: pyproject.toml
ai/fraud-ai/src/: config.py  events.py  handler.py  main.py  models.py  repository.py  service.py
ai/fraud-ai/tests/: test_handler.py  test_service.py
ai/moderation-ai/: pyproject.toml
ai/moderation-ai/src/: config.py  events.py  handler.py  main.py  models.py  repository.py  service.py
ai/moderation-ai/tests/: test_handler.py  test_service.py
ai/ranking-ai/: pyproject.toml
ai/ranking-ai/src/: config.py  handler.py  main.py  models.py  repository.py  service.py
ai/ranking-ai/tests/: test_handler.py  test_service.py
ai/recommendation-ai/: pyproject.toml  requirements.txt
ai/recommendation-ai/src/: config.py  events.py  handler.py  main.py  models.py  repository.py  service.py
ai/recommendation-ai/tests/: test_handler.py  test_service.py
ai/thumbnail-ai/: pyproject.toml  requirements.txt
ai/translation-ai/: pyproject.toml  requirements.txt
ai/translation-ai/src/: config.py  handler.py  main.py  models.py  repository.py  service.py
ai/translation-ai/tests/: test_handler.py  test_service.py
ai/vision-ai/: pyproject.toml
ai/vision-ai/src/: config.py  events.py  handler.py  main.py  models.py  repository.py  service.py
ai/vision-ai/tests/: test_handler.py  test_service.py
ai/voice-ai/: pyproject.toml  requirements.txt
ai/voice-ai/src/: config.py  handler.py  main.py  models.py  repository.py  service.py
ai/voice-ai/tests/: test_handler.py  test_service.py
api/gateway/: routes.yaml
api/graphql/: schema.graphql
api/grpc/: buf.gen.yaml  buf.yaml
api/rest/: openapi.yaml
api/webhooks/: events.yaml
api/webrtc/: signaling.yaml
api/websocket/: events.yaml
apps/web/: next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.ts
config/: identity-service.yaml
database/migrations/: 000001_create_users.down.sql  000001_create_users.up.sql  000002_create_creator_profiles.up.sql  000003_create_follows.up.sql  000004_create_streams.up.sql
deployment/development/: Dockerfile.python  Dockerfile.rust  docker-compose.yml
docs/: INDEX.md  README.md
docs/adr/: ADR-0001-MONOREPO.md  ADR-0002-KUBERNETES.md  ADR-0003-POSTGRESQL.md  ADR-0004-KAFKA.md  ADR-0005-WEBRTC.md  ADR-0006-EVENT_DRIVEN.md  ADR-0007-CQRS.md  ADR-0008-CLICKHOUSE.md  ADR-0009-OPENSEARCH.md  ADR-0010-ZERO_TRUST.md  ADR_TEMPLATE.md  README.md
docs/ai/: AI_ETHICS.md  AI_PIPELINES.md  AI_PLATFORM.md  AI_SECURITY.md  CLIP_GENERATION.md  COMPUTER_VISION.md  CREATOR_AI.md  FEATURE_STORE.md  MODEL_DEPLOYMENT.md  MODEL_REGISTRY.md  MODERATION_AI.md  PROMPT_LIBRARY.md  README.md  RECOMMENDATION_AI.md  THUMBNAIL_GENERATION.md  TRANSLATION_AI.md  VECTOR_DATABASE.md  VOICE_AI.md
docs/api/: API_GUIDELINES.md  AUTHENTICATION.md  ERROR_CODES.md  GRAPHQL.md  GRPC.md  PAGINATION.md  RATE_LIMITING.md  README.md  REST.md  VERSIONING.md  WEBHOOKS.md  WEBRTC.md  WEBSOCKET.md
docs/architecture/: API_GATEWAY.md  CACHE_STRATEGY.md  CDN_ARCHITECTURE.md  COMPONENT_DIAGRAMS.md  CQRS.md  DATA_FLOW.md  DISASTER_RECOVERY.md  DOMAIN_DRIVEN_DESIGN.md  DOMAIN_MODEL.md  EDGE_ARCHITECTURE.md  EVENT_DRIVEN_ARCHITECTURE.md  EVENT_SOURCING.md  FAILOVER.md  HIGH_AVAILABILITY.md  LATENCY_BUDGET.md  MICROSERVICES.md  MULTI_CLOUD.md  MULTI_REGION.md  README.md  SCALABILITY.md  SEARCH_ARCHITECTURE.md  STORAGE_ARCHITECTURE.md  STREAMING_PIPELINE.md  SYSTEM_OVERVIEW.md  WEBRTC_ARCHITECTURE.md
docs/database/: BACKUPS.md  CLICKHOUSE.md  DATABASE_OVERVIEW.md  DATABASE_STANDARDS.md  DATA_RETENTION.md  INDEXING.md  MIGRATIONS.md  NEO4J.md  REDIS.md  (+6 more)
scripts/: check-ci.ps1  dev.ps1  init.ps1  migrate.ps1  scaffold-dirs.ps1  validate-dependabot.py
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
services/media-service/: API.md  CHANGELOG.md  CONFIGURATION.md  Cargo.toml  DATABASE.md  DEPLOYMENT.md  EVENTS.md  OWNERS.md  README.md  RUNBOOK.md  TESTING.md  TROUBLESHOOTING.md  go.mod
services/media-service/cmd/: main.go
services/media-service/internal/config/: config.go
services/media-service/internal/domain/: domain.go
services/media-service/internal/events/: events.go
services/media-service/internal/handler/: handler.go
services/media-service/internal/repository/: repository.go
services/media-service/internal/service/: service.go
services/media-service/migrations/: 001_initial.sql
services/media-service/src/: config.rs  domain.rs  events.rs  main.rs  repository.rs  service.rs
(+1048 files in other folders)
