[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "clip-ai"
version = "0.1.0"
description = "Clip AI microservice for video clip generation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.25.0",
    "pydantic>=2.5.0",
    "aiokafka>=0.10.0",
    "httpx>=0.26.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
