[package]
name = "media-service"
version = "0.1.0"
edition = "2021"

[features]
default = []
kafka = ["rdkafka"]

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = "0.14"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rdkafka = { version = "0.36", features = ["tokio"], optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"] }
rand = "0.8"
async-trait = "0.1"
anyhow = "1"
